Fix image alignment issue

--- a/assets/css/base/gutenberg-blocks.scss
+++ b/assets/css/base/gutenberg-blocks.scss
@@ -306,6 +306,9 @@
 
 	// Image
 	.wp-block-image {
+		
+		display: inline;
+
 		figure {
 			margin-bottom: ms(2);
 		}
